<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="com.fabiolucenaribas.consumoCombustivel.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/gasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/gasolina"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:text="@string/mascara" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_alcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/alcool"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:text="@string/mascara" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_exemplo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onClickBtn"
        android:text="@string/calcular"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="291dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacao"
        android:layout_marginTop="10dp" />

</LinearLayout>
